fix(styles): fix overflow for image elements in blog

--- a/src/components/layouts/BlogLayout.scss
+++ b/src/components/layouts/BlogLayout.scss
@@ -64,6 +64,9 @@
     display: block;
     width: auto;
     height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 0;
   }
 
   & a {
